fix padding on mobile error messages, fixes #48

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -7,6 +7,7 @@ body,
 html
   height: 100%
   min-height: 100%
+  min-width: 200px
 
 body
   background-color: #{"{{ theme.background_color }}"}
@@ -178,7 +179,7 @@ textarea
   margin-bottom: 30px
 
   @media screen and (max-width: $break-small)
-    margin: 16px
+    margin: 16px 0
 
 
   li
